bk_ida/gccida/c1/new_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/new_buff/src/cpplex.c:2422:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 * new_buff( size_t len) 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/new_buff/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/new_buff/src/cpplex.c:2437:23: error: expected expression
return ( _cpp_buff_0 *)&v3[v2]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/new_buff/src/cpplex.c:2437:10: error: use of undeclared identifier '_cpp_buff_0'
return ( _cpp_buff_0 *)&v3[v2]; 
         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/new_buff/src/obj/cpplex.o] Error 1
